--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "name": "web2-final-project",
   "version": "1.0.0",
-  "description": "<h1>This is The Web2 Final Project </h1>",
-  "main": "index.js",
+  "description": "Node.js blog application with markdown support",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "express": "^5.2.1"
+    "body-parser": "^1.20.2",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "gray-matter": "^4.0.3",
+    "markdown-it": "^13.0.2",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
-    "nodemon": "^1.0.2"
+    "nodemon": "^3.0.2"
   }
 }
